--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Орлогын Таамаглалын Статистик Шинжилгээ"
-author: "Javkhlan"
+title: "Логистик регресс ашиглан орлогын түвшнийг илрүүлэх"
+author: "Г.Жавхлан"
 date: last-modified
 lang: mn
 bibliography: references.bib
@@ -16,7 +16,7 @@ format:
 
 Энэ төслийн зорилго нь хувь хүний жилийн орлого 50,000 ам.доллараас дээш эсэхийг таамаглах явдал юм. Бид АНУ-ын Хүн амын тооллогын Adult Income өгөгдлийн санг ашиглан орлогын түвшинг урьдчилан таамаглах загвар боловсруулна. Энэхүү өгөгдлийн сан нь нас, боловсрол, мэргэжил, гэр бүлийн байдал зэрэг олон хувьсагчийг агуулдаг бөгөөд эдгээр нь хувь хүний санхүүгийн байдалд нөлөөлдөг гол хүчин зүйлс юм.
 
-Төслийн үндсэн зорилго нь зөвхөн таамаглал гаргах бус, өгөгдөл дэх хамаарал, ангиллын тэнцвэргүй байдал, оролцож буй хувьсагчдын нөлөөллийг ойлгож, загварын үйл ажиллагааг үнэлэхэд оршино. Энд бид логистик регрессийг ашиглан хоёртын ангиллын асуудлыг шийдвэрлэх ба загварын үзүүлэлтүүд нь орлогыг зөв таамаглах боломжийг хэр сайн хангаж байгааг илтгэнэ. Үүнээс гадна энэ төсөл нь өгөгдлийн шинжилгээ, ангиллын загварчлал болон статистик үндэслэлтэй шийдвэр гаргалтын практик дадлага олгоно.
+Төслийн үндсэн зорилго нь зөвхөн таамаглал гаргах бус, өгөгдөл дэх хамаарал, классын тэнцвэргүй байдал, оролцож буй хувьсагчдын нөлөөллийг ойлгож, загварын үйл ажиллагааг үнэлэхэд оршино. Энд бид логистик регрессийг ашиглан хоёртын ангиллын асуудлыг шийдвэрлэх ба загварын үзүүлэлтүүд нь орлогыг зөв таамаглах боломжийг хэр сайн хангаж байгааг илтгэнэ. Үүнээс гадна энэ төсөл нь өгөгдлийн шинжилгээ, ангиллын загварчлал болон статистик үндэслэлтэй шийдвэр гаргалтын практик дадлага олгоно.
 
 # Өгөгдөл
 
@@ -30,13 +30,13 @@ Adult Income Dataset нь АНУ-ын Хүн амын тооллогын 1994 о
 
 Энэ өгөгдлийн санд томоохон сорилт нь **класс тэнцвэргүй байдал** юм:
 - Ихэнх хүмүүс (ойролцоогоор 76%) $\leq50K$ орлоготой.
-- Цөөн хувь (ойролцоогоор 24%) $>50K$ орлоготой.
+- цөөнх хувь (ойролцоогоор 24%) $>50K$ орлоготой.
 
 Энэ нь naive "үргэлж $\leq50K$ гэж таамагла" загвар 76% нарийвчлалтай байх ч таамаглах чадваргүй гэсэн үг. Иймээс бид F1 оноо, Recall зэрэг тэнцвэртэй үзүүлэлтүүдийг чухалчилдаг.
 
 ## Онцлогийн сонголт
 
-Бид эхний өгөгдөл дээр **хялбаршуулалт** хийсэн: давхардсан, ач холбогдол багатай буюу тайлбарлахад хэцүү баганыг арилгасан.
+Бид эхний өгөгдөл дээр хялбаршуулалт хийсэн: давхардсан, ач холбогдол багатай буюу тайлбарлахад хэцүү баганыг арилгасан.
 
 **Ашигласан онцлогууд (9):**
 - Тоон (5): `age`, `educational-num`, `capital-gain`, `capital-loss`, `hours-per-week`
@@ -47,24 +47,20 @@ Adult Income Dataset нь АНУ-ын Хүн амын тооллогын 1994 о
 
 Энэхүү сонголт нь тайлбарлах боломжтой, хялбар загвар бий болгох зорилготой.
 
-## Өгөгдөл хуваах стратеги
+## Өгөгдөл хуваах
 
-Бид өгөгдлийг **80/20 (сургалт/баталгаажуулалт)** харьцаагаар, `income_>50K`-ээр **стратифик** хуваасан. Хуваалтын үед цөөлсөн онцлогууд болон зорилтот баганыг `train_split.csv`, `val_split.csv` файлд хадгалсан.
-
-Ингэснээр:
-- Дахин давтагдах боломжтой
-- Урьдчилсан боловсруулалт болон загвар сургалт ижил багцтай ажиллана
+Бид өгөгдлийг **80/20** сургалт/баталгаажуулалт харьцаагаар, `income_>50K`-ээр стратифик хуваасан. Хуваалтын үед цөөлсөн онцлогууд болон зорилтот баганыг `train_split.csv`, `val_split.csv` файлд хадгалсан. Гол нь 2 файлын дунд `income_>50K` хувьсагчийн утгын харьцааг хадгалсан. 
 
 ## Урьдчилсан боловсруулалт
 
 **Тоон онцлогууд:**  
-StandardScaler ашигласан (дундаж 0, дисперс 1). Энэ нь градиент бууруулалт хурдан, тогтвортой ажиллахад чухал.
+StandardScaler ашигласан (дундаж 0, дисперс 1). Энэ нь градиент бууруулалт хурдан, тогтвортой ажиллуулахад чухал.
 
 **Категори онцлогууд:**  
-OneHotEncoder(handle_unknown='ignore') ашигласан. Энэ нь категорийг хоёртын вектор болгон хувиргадаг. Жишээлбэл, `education=Bachelors` $\to$ `education_Bachelors=1`, бусад=0.
+`OneHotEncoder` ашигласан. Энэ нь категорийг хоёртын вектор болгон хувиргадаг. Жишээлбэл, `education=Bachelors` $\to$ `education_Bachelors=1`, бусад=0.
 
 **Классын жин:**  
-`class_weight='balanced'` тохиргоо нь цөөн ангийг ($>50K$) илүү чухалчилж, алдагдлын функцэд жин нэмдэг.
+`class_weight='balanced'` тохиргоо нь цөөнх классыг ($>50K$) илүү чухалчилж, алдагдлын функцэд жин нэмдэг.
 
 **Загварын гиперпараметр:**
 - learning_rate ойролцоогоор 0.1
@@ -198,7 +194,7 @@ for iteration in range(self.max_iter):
 
 Манай өгөгдөлд 76% нь $\leq50K$, 24% нь $>50K$ байна. Хэрэв бид юу ч хийхгүй бол, загвар зүгээр л "бүх зүйл $\leq50K$" гэж таамаглаж, 76% нарийвчлалд хүрч магадгүй — гэхдээ энэ нь ямар ч хэрэггүй юм!
 
-Шийдэл нь **классын жинлэлт** юм. Бид цөөн ангийн (>50K) алдааг илүү "чухал" болгоно:
+Шийдэл нь **классын жинлэлт** юм. Бид цөөнх классын (>50K) алдааг илүү "чухал" болгоно:
 
 $$
 w_{\text{class}} = \frac{m}{2 \cdot m_{\text{class}}}
@@ -219,7 +215,7 @@ loss = -np.mean(sample_weights * (y * np.log(y_pred_clipped) +
                                    (1 - y) * np.log(1 - y_pred_clipped)))
 ```
 
-## Pipeline: Бүгдийг нэгтгэх
+## Пайплайн
 
 Sklearn-ийн `Pipeline` нь бүх зүйлийг зохион байгуулахад туслана. Бид preprocess (StandardScaler + OneHotEncoder) болон манай custom LogisticRegression-г нэг л обьект болгон нэгтгэж чаддаг:
 
@@ -254,195 +250,108 @@ model.fit(X_train, y_train)
 
 # Үр дүн
 
-Одоо хамгийн сонирхолтой хэсэг: манай загвар яаж ажилласан бэ?
+## Ерөнхий гүйцэтгэл:
 
-## Ерөнхий гүйцэтгэл: Бодит тоонууд
+Баталгаажуулалтын хэсэг (8,792 мөр) дээр манай загвар дараах үзүүлэлтүүдийг авсан:
 
-Баталгаажуулалтын багц (8,792 дээж) дээр манай загвар дараах үзүүлэлтүүдийг авсан:
+![Confusion матриц](images/metrics.png)
 
-- **Accuracy: 84.7%** — Нийт таамаглалын 84.7% нь зөв байсан. Сайн сонсогддог боловч бүтэн дүр зургийг харуулахгүй байна.
-- **Precision: 73.4%** — Хэрэв бид ">50K" гэж таамагласан бол, 73.4% нь үнэхээр >50K байсан. Бидний эерэг таамаглал хэр найдвартай байгааг харуулна.
-- **Recall: 59.3%** — Бүх үнэхээр >50K хүмүүсийн 59.3%-ийг бид зөв таамагласан. Өөрөөр хэлбэл, бид 40.7%-ийг алдсан — энэ бол хамгийн том сул тал.
-- **F1 Score: 65.6%** — Precision ба Recall-ийн гармоник дундаж.
+Эдгээр тоонууд юу гэсэн үг вэ? Бидний загвар ерөнхийдөө сайн ажилладаг боловч цөөнх классыг (>50K) таних нь илүү хэцүү байна. Энэ нь тэнцвэргүй өгөгдлийн ердийн асуудал юм.
 
-Эдгээр тоонууд юу гэсэн үг вэ? Бидний загвар ерөнхийдөө сайн ажилладаг боловч цөөн ангийг (>50K) таних нь илүү хэцүү байна. Энэ нь тэнцвэргүй өгөгдлийн ердийн асуудал юм.
-
-## Confusion Матриц: Алдааны Ангилал
+## Confusion матриц
 
 Confusion матриц нь манай алдаануудын төрлийг харуулна:
 
-|              | Таамагласан $\leq50K$ | Таамагласан $>50K$ |
-|--------------|-----------------------|--------------------|
-| Үнэн $\leq50K$ | **6074** TN | **581** FP |
-| Үнэн $>50K$   | **762** FN | **1111** TP |
+![Confusion матриц](images/conmatrix.png)
 
-**True negative (6074):** Зөв таамагласан $\leq50K$ хүмүүс. Энэ нь манай загварын "хүчирхэг тал" юм — бид ихэнх ангийг сайн мэднэ.
+Яагаад вэ? Өгөгдөл тэнцвэргүй байгаа учраас, энэ загвар байнга олонх классыг ($\leq50K$) харахаар сургагдсан. Энэ нь цөөнх классыг таних нь хэцүү болгодог.
 
-**True positive (1111):** Зөв таамагласан $>50K$ хүмүүс. Сайн, гэхдээ үнэхээр >50K болох 1873 хүнээс 1111-ийг л олсон байна.
+## Класс тус бүр дээрх гүйцэтгэл
 
-**False positive (581):** Буруу $>50K$ гэж таамагласан ($\leq50K$ байсан). "Хуурамч дохио" — загвар хэт өөдрөг байсан.
+Класс тус бүрээр нарийвчлан харвал:
 
-**False negative (762):** Алдсан $>50K$ хүмүүс ($\leq50K$ гэж буруу таамагласан). **Энэ бол манай хамгийн том асуудал** — бид ашигтай ангиллын бараг хагасыг алдаж байна!
-
-Яагаад вэ? Өгөгдөл тэнцвэргүй байгаа учраас, загвар байнга ихэнх ангийг ($\leq50K$) харахаар сургагдсан. Энэ нь цөөн ангийг таних нь хэцүү болгодог.
-
-## Ангилал Тус Бүрийн Гүйцэтгэл
-
-Ангилал тус бүрээр нарийвчлан харвал:
-
-**$\leq50K$ анги (ихэнх):**
+**$\leq50K$ анги (олонх):**
 - Precision: 0.89
 - Recall: 0.91  
 - F1: 0.90
 
-Маш сайн! Загвар энэ ангийг амархан таньдаг.
+Загвар энэ классыг амархан таньдаг.
 
-**$>50K$ анги (цөөн):**
+**$>50K$ анги (цөөнх):**
 - Precision: 0.66
 - Recall: 0.59
 - F1: 0.62
 
 Илүү муу. Энэ нь тэнцвэргүй өгөгдлийн шууд үр дагавар — цөөн дээжтэй ангиудыг суралцах нь хэцүү.
 
-## Сургалтын Процесс: Конвергенцийн Түүх
-
-Манай загвар 800 давтамжид хүрч, алдагдал:
-- **Эхний алдаа: 0.5324**
-- **Сүүлийн алдаа: 0.3819**  
-- **Бууралт: 28.27%**
-
-Энэ нь загвар үнэхээр суралцаж байгааг харуулна! Алдагдал үргэлжлэн буурч байгаа нь сайн. Хэрэв энэ нь тэгш хэвийн байсан бол, бид илүү их давтамж, эсвэл илүү өндөр сурах хурд шаардлагатай байж магадгүй.
-
-Сурах хурдны бууралт ч ажилласан — эхлээд том алхмууд, дараа нь нарийвчлалтай тааруулалт. Манай хэрэгжүүлэлт ямар ч divergence (explosion) үзүүлээгүй нь сайн юм.
-
-## Онцлогийн Ач Холбогдол: Юу Хамгийн Чухал вэ?
+## Онцлогийн ач холбогдол
 
 Жингүүдийг харахад, юу хамгийн чухал болохыг харж болно. Эхний 5 эерэг ба сөрөг онцлогууд:
 
-**Эерэг нөлөө (>50K рүү түлхэх):**
+**Эерэг нөлөө (>50K рүү ойртуулах):**
 
-1. **`educational-num` (+0.89):** Гайхалтай биш юм! Боловсрол өндөр байх тусам орлого өндөр байх магадлал ихтэй. Энэ нь манай хамгийн хүчирхэг таамаглагч юм.
+1. **`educational-num` (+0.89):** Боловсрол өндөр байх тусам орлого өндөр байх магадлал ихтэй. 
 
-2. **`capital-gain` (+0.76):** Хэрэв та хөрөнгө оруулалтаас орлого олж байвал, та аль хэдийн сайн байгаа байх магадлалтай.
+2. **`capital-gain` (+0.76):** Хэрэв та хөрөнгө оруулалтаас орлого олж байвал орлого өндөр байх магадлал дээшилнэ.
 
 3. **`marital-status_Married-civ-spouse` (+0.46):** Гэрлэсэн хүмүүс илүү тогтвортой орлоготой байх хандлагатай.
 
 4. **`occupation_Exec-managerial` (+0.52):** Удирдах албан тушаал = илүү өндөр цалин.
 
-5. **`hours-per-week` (+0.28):** Илүү их ажилласан = илүү их мөнгө. Энгийн, гэхдээ үнэн.
+5. **`hours-per-week` (+0.28):** Илүү их ажилласан = илүү их мөнгө.
 
-**Сөрөг нөлөө ($\leq50K$ рүү түлхэх):**
+**Сөрөг нөлөө ($\leq50K$ рүү ойртуулах):**
 
 1. **`occupation_Other-service` (-0.67):** Үйлчилгээний ажил ихэвчлэн бага цалинтай.
 
-2. **`marital-status_Never-married` (-0.48):** Ганц бие байх нь бага орлоготой холбоотой (жинхэнэ байдалд, бусад хүчин зүйлээс шалтгаалж магадгүй).
+2. **`marital-status_Never-married` (-0.48):** Ганц бие байх нь бага орлоготой холбоотой (гэхдээ бодит байдалд бусад хүчин зүйлээс шалтгаалж магадгүй).
 
 3. **`capital-loss` (-0.41):** Хөрөнгийн алдагдал санхүүгийн асуудлын шинж тэмдэг.
 
-4. **`education_HS-grad` (-0.32):** Дунд боловсрол дангаараа өндөр орлого хангахад хүрэлцэхгүй.
+4. **`education_HS-grad` (-0.32):** Бүрнэ дунд боловсрол дангаараа өндөр орлого хангахад хүрэлцэхгүй.
 
-Эдгээр дүн нь ямар нэг "ухаантай" санагддаг уу? Тийм ээ! Энэ бол сайн шинж тэмдэг — манай загвар ойлгомжтой хэв маягийг суралцсан, зүгээр л шуугианыг тохируулаагүй байна.
+## Магадлалын тархалт
 
-## Магадлалын Тархалт: Ангиудын Давхцал
-
-Сигмоид функц шуглан нийлбэрийг магадлал руу хувиргадаг. Гэхдээ эдгээр магадлалын тархалт хэрхэн байна вэ?
+Сигмоид функц шугаман нийлбэр буюу linear combination-ийг ($z = w_1 x_1 + w_2 x_2 + \dots + w_n x_n + b$) магадлал руу хувиргадаг.
 
 **$\leq50K$ хүмүүсийн хувьд:**
 - Дундаж магадлал (>50K байх): **0.18**
 - Ихэнх нь 0-0.3 хооронд
 
-Загвар эдгээр хүмүүсийг 100% эерэг биш гэж бодож байна, гэхдээ ихэвчлэн магадлалыг бага байлгадаг. Сайн!
+Загвар эдгээр хүмүүсийг 100% эерэг биш гэж бодож байна, гэхдээ ихэвчлэн магадлалыг бага байлгадаг.
 
 **$>50K$ хүмүүсийн хувьд:**
 - Дундаж магадлал: **0.57**
 - Илүү өргөн тархалттай (0.2-0.9)
 
-Энд асуудал бий. Зарим >50K хүмүүс 0.9+ магадлалтай (загвар итгэлтэй), гэхдээ зарим нь 0.2-0.4 (загвар эргэлзэж байна). Энэ **давхцал** нь яагаад бид төгс гүйцэтгэл авч чадахгүй болохыг тайлбарладаг — зарим дээжүүд үнэхээр хэцүү!
+Зарим >50K орлоготой хүмүүс өндөр магадлалтай (0.9+) гарч байгаа ч, зарим нь харьцангуй бага магадлалтай (0.2–0.4) байна. Энэ магадлалын давхцал нь загвар төгс ажиллахаас өөр аргагүйг харуулж байна. Зарим өгөгдөл дээр тодорхой ангилалт хийх хэцүү.
 
-## Хязгаарын Оптимизаци: 0.5 Хамгийн Сайн Уу?
+## PR Trade-off
 
-Үндсэн хязгаар (0.5) нь: хэрэв $P(>50K) \geq 0.5$ бол, бид ">50K" гэж таамаглана. Гэхдээ энэ оптимал уу?
+Яагаад бид 100% precision ба 100% recall-д зэрэг хүрч чадахгүй гэж?
 
-Бид янз бүрийн хязгаарыг туршиж, F1 оноог максимизлах утгыг олсон:
+Математик талаас боломжгүй, учир нь ангиуд заримдаа давхцдаг. Манай магадлалын тархалтын график үүнийг тодорхой харуулна. Зарим >50K орлоготой хүмүүсийг загвар бага магадлалтай гэж үзэж, зарим $\leq50K$ хүмүүс өндөр магадлалтай гэж үнэлдэг. Иймээс бид аль ч загвараар 100% зөв ангилах боломжгүй.
 
-- **Оптимал хязгаар: 0.43** (0.5-аас бага!)
-- **F1 оноо: 0.674** (0.656-аас сайжирсан)
-- Trade-off:
-  - Precision: 0.640 (буурсан, 0.734-с)
-  - Recall: 0.714 (өссөн, 0.593-с)
+Загварын ерөнхий гүйцэтгэлийг ROC AUC=0.891 үзүүлж байна. Энэ нь санамсаргүй таамаглалаас (0.5) илүү сайн бөгөөд ангилалд дунджаар үнэлгээ сайн байгааг харуулна. Төгс үзүүлэлт биш (1.0), гэхдээ оюутны төсөлд анхны оролдлого болгон маш сайн гүйцэтгэл юм.
 
-Энэ юу гэсэн үг вэ? Хязгаарыг бууруулснаар, бид илүү олон дээжийг ">50K" гэж ангилдаг. Энэ нь илүү олон үнэн эерэг авдаг (recall өсдөг), гэхдээ мөн хуурамч эерэг нэмдэг (precision буурдаг).
+![Precision-Recall ба ROC муруйнууд](images/PRC.png)
 
-Тэнцвэргүй өгөгдлийн хувьд, хязгаарыг тохируулах нь ихэвчлэн утга учиртай. Хэрэв бид recall-ийг илүү чухалчилдаг бол (цөөн ангийг алдахгүй байх), 0.43 нь илүү сайн юм.
+Зүүн талын Precision–Recall муруй нь бидний хамгийн том шийдвэрийн тэнцвэрийг илтгэнэ. Recall-ийг өсгөх үед илүү олон өндөр орлоготой хүмүүсийг илрүүлэх боломжтой ч, босго оноо доошлохын хэрээр Precision буурч, буруу эерэг таамаглал нэмэгддэг. Харин Precision-ийг сайжруулахын тулд илүү хатуу босго тавибал загвар зөв таамаглалд илүү итгэлтэй болох авч, олон жинхэнэ өндөр орлоготой хүмүүсийг орхигдуулах эрсдэлтэй. Энэ муруй нь хоёр классын үл тэнцвэртэй өгөгдлийн үед бодит гүйцэтгэлийг илүү үнэн зөв харуулдаг тул стратегийн хувьд түлхүүр үзүүлэлт болдог.
 
-## Precision-Recall Trade-off: Яагаад 100% авч чадахгүй вэ?
-
-Нэг асуудал, олон хүн асуудаг: "Яагаад бид 100% precision БА 100% recall авч чадахгүй вэ?"
-
-Хариулт: Математик боломжгүй, хэрэв ангиуд давхцвал. Манай магадлалын тархалтын график үүнийг харуулна — зарим >50K хүмүүс бага магадлалтай, зарим $\leq50K$ хүмүүс өндөр магадлалтай. Энэ давхцлын бүсэд бид зөв ангилах аргагүй.
-
-ROC AUC: **0.908** — энэ нь загвар ангиудыг ерөнхийдөө сайн ялгаж байгааг харуулна. Төгс (1.0) биш, гэхдээ санамсаргүй (0.5)-аас хол илүү сайн.
-
-## Эцсийн Дүгнэлт
-
-**Юу сайн ажилласан:**
-- 84.7% accuracy — ерөнхийдөө бат бөх гүйцэтгэл
-- Ихэнх ангийг ($\leq50K$) маш сайн мэддэг (F1=0.90)
-- Боловсрол, капиталын ашиг зэрэг утга бүхий хэв маягийг суралцсан
-- Сургалт тогтвортой конвергенц үзүүлсэн
-
-**Юу сайжруулах боломжтой:**
-- Цөөн ангийн recall (59.3%) муу байна — бид >50K хүмүүсийн 40%-ийг алдаж байна
-- Хязгаарын оптимизаци (0.43 рүү) тодорхой хэмжээгээр туслах боловч алтан суманд хүрэхгүй
-- Feature engineering (харилцан үйлчлэл, polynomial features гэх мэт) сайжруулж магадгүй
-- Илүү нарийн төвөгтэй загварууд (Random Forest, Gradient Boosting) илүү сайн байж магадгүй
-
-**Гол сургамж:**
-- Тэнцвэргүй өгөгдөл хэцүү байдаг — accuracy дангаараа хангалтгүй
-- Class weighting туслах боловч шидэт гэж хэлэхэд хэцүү
-- Онцлогийн сонголт чухал юм — зөв онцлогууд ихийг хийнэ
-- Precision ба recall хоорондын trade-off үргэлж байна — та хоёуланг нь үргэлж максимизлаж чадахгүй
-
-Ерөнхийдөө, энэ нь оюутны төсөл хувьд сайн анхны оролдлого юм. Бид логистик регрессийг эхнээс нь хэрэгжүүлж, тэнцвэргүй өгөгдөлтэй ажиллаж, ойлгомжтой үр дүн авсан. Бодит ертөнцөд бид илүү нарийн төвөгтэй загвар эсвэл илүү их feature engineering ашиглаж магадгүй, гэхдээ үндсэн санаа ижил хэвээр байна: **өгөгдлөө ойлгох, сайн загвар сонгох, үр дүнг нарийвчлан шинжлэх**.
-
-# Визуализаци ба Шинжилгээ
-
-Тоон үзүүлэлтүүд сайн байна, гэхдээ график дүрслэлүүд илүү гүн ойлголт өгнө. Энд бид хамгийн чухал дүрслэлүүдийг харуулна.
-
-## Сургалтын Процесс: Алдааны Буурах Муруй
-
-Эхлээд загвар яаж суралцсаныг харцгаая. Энэ график нь давтамж бүрийн алдааг харуулна:
-
-![Сургалтын алдааны муруй ба сурах хурдны бууралт](images/trainloss.png)
-
-**Ажиглалт:** Алдаа эхний 200 давтамжид маш хурдан буурч, дараа нь аажмаар тогтворжиж байна. Энэ нь сайн шинж — загвар хэт тохируулалт хийхгүйгээр суралцсан. Сурах хурдны бууралт нь эхний хурдан алхмуудын дараа нарийвчлалтай тааруулалт хийхэд тусалсан.
-
-## Confusion Матриц
-
-Confusion матриц нь бидний алдаануудыг ойлгоход тусалдаг:
-
-![Confusion матриц](images/conmatrix.png)
-
-Матрицаас үзэхэд:
-- **6074 True negatives:** Ихэнх ангийг маш сайн таньж байна
-- **1111 True positives:** Цөөн ангийн зөв таамаглал
-- **762 False negatives:** **Хамгийн том асуудал** — бид >50K хүмүүсийн 40%-ийг алдаж байна
-- **581 False positives:** Хэт болгоомжлосон тохиолдлууд
-
-Тэнцвэргүй өгөгдөлд энэ бол ердийн зүйл — загвар байнга ихэнх ангийг ($\leq50K$) харахаар сургагдсан учраас цөөн ангийг таних нь хэцүү болдог.
+Баруун талын ROC муруй харьцангуй ерөнхий дүр зургийг өгч, манай загварын ялгах чадвар AUC = 0.891 гэдгийг харуулж байна. Энэ нь санамсаргүй таамаглалаас эрс илүү гүйцэтгэлтэй боловч ROC муруй нь үл тэнцвэртэй өгөгдөлд хэт өгөөмөр ханддаг гэдгийг мартаж болохгүй. Иймээс өндөр AUC үзүүлэлт нь өөрөө хангалттай биш: практикт бид босго оноог бодитоор тохируулж, Precision ба Recall-ийн хооронд төслийн зорилгод нийцсэн зөв тэнцвэрийг олох шаардлагатай хэвээр байна.
 
 ## Онцлогийн жин
 
 Жингүүд нь онцлогийн чухал байдлыг харуулна. Эерэг жин = өндөр орлого руу түлхэх, сөрөг жин = бага орлого руу түлхэх:
 
-![Эхний 15 онцлогийн жин](images/features.png)
+![Хамгийн чухал 15 онцлогийн жин](images/features.png)
 
 Хамгийн өндөр нөлөөтэй хүчин зүйлс:
 
 1.  **educational-num (+0.89):** Боловсролын түвшин. Энэ нь хамгийн хүчтэй эерэг нөлөөтэй хүчин зүйл болж байна. Боловсрол өндөр байх тусам орлого өндөр байх магадлал эрс нэмэгдэнэ.
 2.  **capital-gain (+0.76):** Хөрөнгө оруулалтын ашиг. Санхүүгийн нэмэлт эх үүсвэртэй байх нь өндөр орлогын тод шинж тэмдэг юм.
-3.  **occupation_Other-service (-0.67):** Үйлчилгээний салбарын ажил. Энэ нь орлогод сөргөөр нөлөөлж байна, өөрөөр хэлбэл энэ салбарт ажиллагсад $\leq50K$ ангилалд орох магадлал өндөр.
-4.  **marital-status_Never-married (-0.48):** Гэрлээгүй байдал. Ганц бие хүмүүс гэр бүлтэй хүмүүстэй харьцуулахад орлого багатай байх хандлага ажиглагдсан.
+3.  **occupation_Other-service (-0.67):** Үйлчилгээний салбарын ажил. Энэ нь орлогод сөргөөр нөлөөлж байна, өөрөөр хэлбэл энэ салбарт ажиллагсад $\leq50K$ классд орох магадлал өндөр.
+4.  **marital-status_Never-married (-0.48):** Гэрлэж байгаагүй. Ганц бие хүмүүс гэр бүлтэй хүмүүстэй харьцуулахад орлого багатай байх хандлага ажиглагдсан.
 5.  **marital-status_Married-civ-spouse (+0.46):** Гэрлэсэн байдал. Эсрэгээрээ, гэр бүлийн тогтвортой байдал нь өндөр орлоготой эерэг хамааралтай байна.
 
 Эдгээр үр дүн нь нийгэм, эдийн засгийн бодит байдалтай бүрэн нийцэж байна. Загвар маань зүгээр нэг тоо таах биш, бодит амьдралын зүй тогтлыг олж харсан гэж дүгнэж болно.
@@ -460,22 +369,8 @@ Confusion матриц нь бидний алдаануудыг ойлгоход
 *   **Ногоон хэсэг (>50K):** Тархалт нь 0.2-оос 0.9 хүртэл маш өргөн байна. Энд давхцал их байгааг анзаараарай.
 *   Энэ давхцал нь яагаад бид 100% нарийвчлалтай байж чадахгүйг тайлбарладаг. Зарим өндөр орлоготой хүмүүс бага орлоготой хүмүүстэй ижил шинж чанартай (эсвэл эсрэгээрээ) байгаа тул загвар тэднийг ялгахад хүндрэлтэй байна.
 
-## Precision-Recall trade-off
-
-Эцэст нь, загварын гүйцэтгэлийг үнэлэх хамгийн чухал графикуудын нэг: Precision ба Recall-ийн хамаарал.
-
-![Precision-Recall ба ROC муруйнууд](images/PRC.png)
-
-**Яагаад энэ график чухал вэ?**
-
-Зүүн талын Precision–Recall муруй нь бидний хамгийн том шийдвэрийн тэнцвэрийг илтгэнэ. Recall-ийг өсгөх үед илүү олон өндөр орлоготой хүмүүсийг илрүүлэх боломжтой ч, босго оноо доошлохын хэрээр Precision буурч, буруу эерэг таамаглал нэмэгддэг. Харин Precision-ийг сайжруулахын тулд илүү хатуу босго тавибал загвар зөв таамаглалд илүү итгэлтэй болох авч, олон жинхэнэ өндөр орлоготой хүмүүсийг орхигдуулах эрсдэлтэй. Энэ муруй нь хоёр ангиллын үл тэнцвэртэй өгөгдлийн үед бодит гүйцэтгэлийг илүү үнэн зөв харуулдаг тул стратегийн хувьд түлхүүр үзүүлэлт болдог.
-
-Баруун талын ROC муруй харьцангуй ерөнхий дүр зургийг өгч, манай загварын ялгах чадвар AUC = 0.908 гэдгийг харуулж байна. Энэ нь санамсаргүй таамаглалаас эрс илүү гүйцэтгэлтэй боловч ROC муруй нь үл тэнцвэртэй өгөгдөлд хэт өгөөмөр ханддаг гэдгийг мартаж болохгүй. Иймээс өндөр AUC үзүүлэлт нь өөрөө хангалттай биш: практикт бид босго оноог бодитоор тохируулж, Precision ба Recall-ийн хооронд төслийн зорилгод нийцсэн зөв тэнцвэрийг олох шаардлагатай хэвээр байна.
-
 ## Дүгнэлт
 
-Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, хэт тохируулалт ажиглагдаагүй нь зөв регуляризацийн сонголт болон градиент бууруулалтын тохиргоо оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа өндөр орлоготой иргэдийг илрүүлэх Recall (~59%) хангалттай сайн түвшинд хүрээгүй нь өгөгдлийн бүтэц, ангиллын тэнцвэргүй байдал, зарим шинжүүдийн мэдээллийн агууламж хязгаарлагдмал байсантай холбоотой.
+Энэхүү төсөл нь логистик регрессийг практикт хэрэгжүүлэх явцдаа зөвхөн алгоритмын ажиллагаа төдийгүй өгөгдлийн чанар, статистик ойлголтууд загварын гүйцэтгэлд ямар их нөлөөтэйг бодитоор мэдрэх боломж олголоо. Загвар тогтвортой суралцаж, хэт тохируулалт ажиглагдаагүй нь зөв регуляризацийн сонголт болон градиент бууруулалтын тохиргоо оновчтой байсны илрэл юм. Гэсэн хэдий ч гүйцэтгэл, ялангуяа accuracy нь 80% давахгүй байгаа нь өгөгдлийн бүтэц, классын тэнцвэргүй байдал зэрэгтэй холбоотой.
 
-Төслийн явцад магадлал, статистикийн гол ойлголтууд болох лог-ит функцийн утгын орон зай, шалгуур функцийн convex шинж, анхны ба хоёрдугаар төвийн статистикууд, шинжүүдийн хамаарлын бүтэц, мөн ангиллын магадлалын хил зааг зэрэг нь шийдвэр гаргалтад хамгийн хэрэгтэй суурь мэдлэгүүд болсон. Эдгээр ойлголтууд нь “яагаад загвар зарим хүмүүсийг алдаж ангилсан бэ” гэх асуултад цэвэр тоон бус, логик үндэслэлтэй тайлбар өгөх боломжийг бүрдүүлсэн.
-
-Энэхүү ажлаас бид зөв алгоритмээс илүүтэй өгөгдлийн шинж чанар болон магадлалын онолын суурь ойлголт нь загварын бодит гүйцэтгэлийг тодорхойлдог гэдгийг ойлголоо.
+Ирээдүйд Random Forest, Gradient Boosting зэрэг илүү нарийн төвөгтэй загваруудыг ашиглавал >50K орлоготой хүмүүсийг илүү найдвартай таамаглах боломжтой. Гол сургамж нь зөвхөн Accuracy-аас гадна Precision, Recall, ROC/AUC зэрэг үзүүлэлтийг ойлгон, загварын хязгаарлалт, өгөгдлийн чанарыг хамтад нь үнэлэх хэрэгтэй гэдгийг харуулж байна.
