--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "**Хувьсагчид (нийт 9):**\n",
     "- **Тоон (5):** age, educational-num, capital-gain, capital-loss, hours-per-week\n",
-    "- **Чанарын (4):** education, occupation, relationship, gender. Гэхдээ OneHotEncoder ашигласны дараа хувьсагч бүр дахиад задарна.\n",
+    "- **Чанарын (4):** education, occupation, marital-status, gender. Гэхдээ OneHotEncoder ашигласны дараа хувьсагч бүр дахиад задарна.\n",
     "\n",
     "**Зорилтот хувьсагч:** `income_>50K` (0 = ≤50K, 1 = >50K)"
    ]
