--- a/report/statreport.qmd
+++ b/report/statreport.qmd
@@ -65,109 +65,194 @@ format:
 
 Түүврийн нийт хэмжээ нь ойролцоогоор 44,000 бөгөөд бид үүнийг сургах болон үнэлгээ хийх 2 хэсэг болгож хуваана. Хуваалтын дараа 35,165 сургалт, 8,792 баталгаажуулалтын хэсгийг бүрдүүлнэ.
 
-Гэхдээ энэ өгөгдөлтэй ажиллах томоохон бэрхшээл нь **классуудын тэнцвэргүй байдал** юм. Ихэнх хүмүүс ($\approx$ 76%) $\leq50K$ орлоготой. Харин цөөнх хувь нь ($\approx$ 24%) $>50K$ орлоготой.
+Гэхдээ энэ өгөгдөлтэй ажиллах томоохон бэрхшээл нь классуудын тэнцвэргүй байдал юм. Ихэнх хүмүүс ($\approx$ 76%) $\leq50K$ орлоготой. Харин цөөнх хувь нь ($\approx$ 24%) $>50K$ орлоготой.
 
-Бид үргэлж $\leq50K$ гэж таадаг гэнэн модел гаргасан ч accuracy нь 76% болно гэсэн үг. Иймээс бид хF1 оноо, Recall зэрэг тэнцвэртэй үзүүлэлтүүдийг чухалчилдаг.
+Бид үргэлж $\leq50K$ гэж таадаг гэнэн модел гаргасан ч accuracy нь 76% болно гэсэн үг. Иймээс бид 2 классыг хоёуланг нь оновтойгоор авч үздэг логистик регресс загвар гаргах ёстой болоод байна. Үүний тулд F1 оноо, Recall зэрэг үзүүлэлтүүдийг чухалчилна.
 
-## Онцлогийн сонголт
+## Өгөгдлөө цэвэрлэх
 
-Бид эхний өгөгдөл дээр хялбаршуулалт хийсэн: давхардсан, ач холбогдол багатай буюу тайлбарлахад хэцүү баганыг арилгасан.
+Өгөгдлийн хэлбэр:
 
-**Ашигласан онцлогууд (9):**
+$[$ `age`,`workclass`,`fnlwgt`,`education`,`educational-num`,`marital-status`,`occupation`,`relationship`,`race`,`gender`,`capital-gain`,`capital-loss`,`hours-per-week`,`native-country`,`income_>50K` $]$
+
+Бид анхны өгөгдөлөө давхардсан, ач холбогдол багатай буюу тайлбарлахад хэцүү баганыг арилгаж хялбаршуулсан.
+
+**Ашигласан хувьсагчид (9):**
+
 - Тоон (5): `age`, `educational-num`, `capital-gain`, `capital-loss`, `hours-per-week`
-- Категори (4): `education`, `marital-status`, `occupation`, `gender`
 
-**Унагаасан онцлогууд:**
-- `workclass`, `fnlwgt`, `relationship`, `race`, `native-country` болон бусад: Эдгээр нь модель сургахад шуугиан нэмэх буюу `education`-тэй давхцаж байсан (жишээлбэл `educational-num`).
-
-Энэхүү сонголт нь тайлбарлах боломжтой, хялбар загвар бий болгох зорилготой.
+- Чанарын (4): `education`, `marital-status`, `occupation`, `gender`
 
 ## Өгөгдөл хуваах
 
-Бид өгөгдлийг **80/20** сургалт/баталгаажуулалт харьцаагаар, `income_>50K`-ээр стратифик хуваасан. Хуваалтын үед цөөлсөн онцлогууд болон зорилтот баганыг `train_split.csv`, `val_split.csv` файлд хадгалсан. Гол нь 2 файлын дунд `income_>50K` хувьсагчийн утгын харьцааг хадгалсан. 
+Бид өгөгдлийг сургалт/баталгаажуулалт гэсэн хоёр хэсэгт **80/20** харьцаатайгаар, хоёр хэсэгт `income_>50K` классын харьцаа тэнцүү байхаар хувааж, `train_split.csv`, `val_split.csv` файлд хадгалсан. Анхны өгөгдлийн багц дотор `income_>50K`-н 76% нь 0, 24% нь 1 утгатай бол хуваасны дараа энэ харьцаа эвдлээгүй гэсэн үг.
 
 ## Урьдчилсан боловсруулалт
 
-**Тоон онцлогууд:**  
-StandardScaler ашигласан (дундаж 0, дисперс 1). Энэ нь градиент бууруулалт хурдан, тогтвортой ажиллуулахад чухал.
+**Тоон хувьсагчид:**  
+StandardScaler нь тоон хувьсагч бүрийг дундаж утга нь 0, стандарт хазайлт нь 1 болохоор нормальчилдаг. Бүх хувьсагчийг түүврийн дундаж руу нь төвлөрүүлснээр градиент дээр суурилсан алгоритмууд илүү хурдан, тогтвортой суралцахад тусална.
 
-**Категори онцлогууд:**  
-`OneHotEncoder` ашигласан. Энэ нь категорийг хоёртын вектор болгон хувиргадаг. Жишээлбэл, `education=Bachelors` $\to$ `education_Bachelors=1`, бусад=0.
+$$
+X_{\text{scaled}} = \frac{X - \mu}{\sigma}
+$$
 
-**Классын жин:**  
-`class_weight='balanced'` тохиргоо нь цөөнх классыг ($>50K$) илүү чухалчилж, алдагдлын функцэд жин нэмдэг.
+**Чанарын хувьсагчид:**  
+OneHotEncoder нь нэг чанарын хувьсагчийг тус бүрийн чанаруудыг илэрхийлэх хоёртын вектор лүү хөрвүүлж, тоон утгаар илэрхийлдэг нь машин сургалтын алгоритмуудад зохимжтой болгоно. Ямар ч дараалал, зэрэглэл авч үздэггүй. 
+
+Жишээлбэл, `education` гэх чанарын хувьсагчийг авч үзье.
+
+$[E = \{\text{HS}, \text{Bachelors}, \text{Masters}, \text{Doctorate}\}]$
+
+One-hot кодчилол нь уг хувьсагчийг дараах байдлаар хувиргана:
+
+$$
+f(x) = \begin{cases} [1, 0, 0, 0] & \text{if } x = \text{HS} \\[1mm][0, 1, 0, 0] & \text{if } x = \text{Bachelors} \\[1mm][0, 0, 1, 0] & \text{if } x = \text{Masters} \\[1mm][0, 0, 0, 1] & \text{if } x = \text{Doctorate} \end{cases}
+$$
+
+Кодлогдсон онцлог (feature) бүр нь одоо Бернуллийн санамсаргүй хувьсагч болно.
 
 **Загварын гиперпараметр:**
-- learning_rate ойролцоогоор 0.1
-- max_iter ойролцоогоор 800
-- reg_lambda = 1e-4 (L2)
-- lr_decay = 1e-4
-- threshold = 0.5 (шийдвэрийн хязгаар)
 
-Дараагийн хэсэгт математик суурийг дэлгэрэнгүй авч үзнэ.
+- `learning_rate` ойролцоогоор 0.1
+
+- `max_iter` ойролцоогоор 800
+
+- `reg_lambda` = 1e-4 (L2)
+
+- `lr_decay` = 1e-4
+
+- `threshold` = 0.5 (шийдвэрийн хязгаар)
 
 # Загварын хэрэгжүүлэлт
 
-Бид энэ төсөлд логистик регрессийн загварыг эхнээс нь бичихээр шийдсэн. Яагаад гэвэл sklearn-ийн `LogisticRegression` нь олон зүйлийг автоматаар хийдэг бөгөөд бид хэрхэн ажилладгийг нь ойлгохыг хүссэн. Мөн сурах хурдны бууралт, class weighting зэрэг сонирхолтой зүйлсийг өөрсдөө туршиж үзэхийг хүссэн.
+Бид энэ төсөлд логистик регрессийн загварыг гараар хэрэгжүүлсэн. Яагаад гэвэл sklearn-ийн `LogisticRegression` нь олон зүйлийг автоматаар хийдэг бөгөөд бид хэрхэн ажилладгийг нь ойлгохыг илүүд үзлээ. Мөн сурах хурдны бууралт, class weighting зэрэг сонирхолтой зүйлсийг өөрсдөө туршиж үзэхийг хүссэн.
 
 ## Логистик регрессийн үндэс
 
-Логистик регресс нь хамгийн энгийн хэдий ч үр дүнтэй загваруудын нэг юм. Үндсэн санаа нь маш энгийн: бид $w^\top x + b$ гэсэн шугаман функцийг бодож, дараа нь үүнийг 0-оос 1 хүртэлх магадлал руу хувиргана. Энэ хувиргалтыг **сигмоид функц** гэнэ:
+Логистик регресс нь хоёртын ангилал хийх суурь загваруудын нэг юм. Шугаман регресс нь тасралтгүй утгуудыг таамагладаг бол логистик регресс нь аливаа инстанц нь тодорхой классын байх магадлалыг тооцоолдог.
+
+Оролтын хувьсагч $\mathbf{x}$ -н хувьд 
+$$
+P(y = 1 \mid \mathbf{x})
+$$
+
+буюу гаралт $y$ нь $1$-тэй тэнцүү байх магадлалыг олох зорилготой.
+
+Эхлээд бид оролтуудын шугаман тэгшитгэлийг бодно:
+
+$$
+z_i = \mathbf{w}^\top \mathbf{x}_i + b
+$$
+
+Үүнд:
+
+- $\mathbf{w}$ = жингийн вектор (сурах параметрүүд)
+- $b$ = хазайлтын утга
+- $\mathbf{x}_i$ = түүврийн онцлогийн вектор $i$
+- $z_i$ = logit" буюу log odds
+
+```python
+if issparse(X_array):
+    z = X_array.dot(self.weights) + self.bias
+else:
+    z = np.dot(X_array, self.weights) + self.bias
+```
+## Сигмойд функц
+
+Сигмойд функц нь дээрх шугаман нийлбэр $z$ -ийг магадлал болгоно.
 
 $$
 \sigma(z) = \frac{1}{1 + e^{-z}}
 $$
-
-Энэ функц нь маш сайхан шинж чанартай: $z$ их эерэг бол 1 рүү ойртох, их сөрөг бол 0 рүү ойртох, яг 0 бол 0.5 гэх мэт. Ингэснээр бидний загвар нь:
-
-$$
-P(y=1 \mid x) = \sigma(w^\top x + b)
-$$
-
-Манай кодонд энэ нь маш энгийн:
 
 ```python
 def sigmoid(self, z):
     return 1 / (1 + np.exp(-np.clip(z, -500, 500)))  # overflow-оос сэргийлэх
 ```
 
-## Алдагдлын функц: Юу минимизлах вэ?
-
-Одоо бид загварыг яаж сургах вэ? Бид алдагдлын функцийг тодорхойлох хэрэгтэй — бидний загвар хэр муу байгааг хэмждэг тоо. Логистик регресст **binary cross-entropy** гэдгийг ашигладаг:
+Эндээс модел нэг түүврийн хувьд таамаглах магадлал нь дараах томъёгоор илэрхийлэгдэнэ:
 
 $$
-L(w, b) = -\frac{1}{m}\sum_{i=1}^{m}\left[ y^{(i)}\log\hat{y}^{(i)} + (1-y^{(i)})\log(1-\hat{y}^{(i)}) \right]
+\hat{p}_i = P(y_i = 1 \mid \mathbf{x}_i) = \sigma(z_i) = \sigma(\mathbf{w}^T \mathbf{x}_i + b)
 $$
 
-Энэ томъёо анх харахад аймшигтай харагдаж болох юм, гэхдээ санаа нь: хэрэв үнэн утга $y=1$ бол, бид $\log\hat{y}$-г максимизлахыг хүсдэг (өөрөөр хэлбэл $\hat{y}$-г 1 рүү түлхэх). Хэрэв $y=0$ бол, бид $\log(1-\hat{y})$-г максимизлахыг хүсдэг ($\hat{y}$-г 0 рүү түлхэх).
+## Алдааны функц
 
-Гэхдээ зөвхөн энэ хангалтгүй! Хэт тохируулалтаас сэргийлэхийн тулд бид **L2 регуляризаци** нэмнэ. Энэ нь жингүүдийг хэт том болохоос сэргийлдэг:
+Одоо бид загварыг яаж сургахын тулд алдааны функцийг тодорхойлох хэрэгтэй. Логистик регресст binary cross-entropy хэмээх ойлголтыг ашигладаг.
+
+Нэг таамаглалын хувьд алдаа нь:
 
 $$
-J(w, b) = L(w, b) + \frac{\lambda}{2m}\lVert w \rVert^2
+\ell = -\left[y \log(\hat{y}) + (1-y)\log(1-\hat{y})\right]
 $$
 
-Манай кодонд:
+Үүнд:
+
+- $y$ = жинхэнэ утга (0 or 1)
+- $\hat{y}$ = таамагласан утга
+
+Cross-entropy нь загварыг итгэлтэйгээр буруу таамаглал гаргахыг илүү шийтгэдэг. Өөрөөр хэлбэл 1 эсвэл 0-тэй маш ойрхон магадлал (0.99, 0.01 г.м.) гаргаад энэ нь буруу болж таарвал алдаа нь өндөр гарч ирнэ.
+
+| Таамаглал $\hat{y}$ | Алдаа $-\log(\hat{y})$ | Шийтгэлийн түвшин |
+|---------------------|----------------------|----------------|
+| 0.99 (итгэлтэй, зөв) | 0.01 | Маш бага |
+| 0.50 (итгэл багатай) | 0.69 | Дунд зэргийн |
+| 0.10 (итгэлтэй, буруу) | 2.30 | Том |
+| 0.01 (маш итгэлтэй, буруу) | 4.61 | Маш том|
+
+$$
+L_{\text{CE}} = -\frac{1}{m}\sum_{i=1}^{m} 
+\left[
+y_i \log(\hat{y}_i) + (1 - y_i)\log(1 - \hat{y}_i)
+\right].
+$$
+
+## L2 тогтворжуулалт (regularization)
+
+Хэт том утгатай жингээс үүдэлтэй overfitting-ээс сэргийлнэ 
+
+$$
+\frac{\lambda}{2m}\|\mathbf{w}\|^2
+$$
+
+Үүнд:
+
+- $\lambda$ = тогтворжуулалтын хэмжээ (гиперпараметр)
+
+- $m$ = түүврийн хэмжээ
+
+- $\|\mathbf{w}\|^2 = w_1^2 + w_2^2 + \cdots + w_n^2$
+
+Нийт алдаа:
+
+$$
+L = -\frac{1}{m}\sum_{i=1}^{m}\left[y_i\log(\hat{y}_i) + (1-y_i)\log(1-\hat{y}_i)\right] + \frac{\lambda}{2m}\|\mathbf{w}\|^2
+$$
 
 ```python
-def _compute_loss(self, X, y, y_pred):
-    m = len(y)
-    # Binary cross-entropy
-    epsilon = 1e-15  # log(0) гэхээс сэргийлэх
-    y_pred_clipped = np.clip(y_pred, epsilon, 1 - epsilon)
-    loss = -np.mean(y * np.log(y_pred_clipped) + (1 - y) * np.log(1 - y_pred_clipped))
+def compute_loss(self, y_true, y_pred, sample_weights=None):
+
+    m = len(y_true)
     
-    # L2 регуляризаци нэмэх
-    if self.reg_lambda > 0:
-        l2_penalty = (self.reg_lambda / (2 * m)) * np.sum(self.weights ** 2)
-        loss += l2_penalty
+    epsilon = 1e-15
+    y_pred = np.clip(y_pred, epsilon, 1 - epsilon)
     
-    return loss
+    sample_losses = -(y_true * np.log(y_pred) + 
+                      (1 - y_true) * np.log(1 - y_pred))
+    
+    if sample_weights is not None:
+        sample_losses = sample_losses * sample_weights
+    
+    cross_entropy = np.mean(sample_losses)
+    
+    l2_penalty = (self.reg_lambda / (2 * m)) * np.sum(self.weights ** 2)
+    
+    return cross_entropy + l2_penalty
 ```
 
-## Градиент бууруулалт: Загварыг яаж сургах вэ
+## Градиент бууруулалт (Gradient descent)
 
-Одоо манай алдагдлын функц бий. Үүнийг хэрхэн багасгах вэ? Алдагдлын функц нь загварын таамаглал үнэнээс хэр хол байгааг хэмждэг бөгөөд үүнийг багасгах нь бидний гол зорилго юм. Үүний тулд градиент бууруулалт гэж нэрлэгддэг энгийн боловч хүчирхэг аргыг ашиглана. Энэ арга нь алдагдлын функцийн градиентыг (өөрөөр хэлбэл, функцийг хамгийн хурдан өөрчлөх чиглэлийг) тооцоолж, уг чиглэлд бага алхам хийснээр жингүүдийг сайжруулдаг.
+Одоо манай алдагдлын функц бий. Гэхдээ нийт алдааг хэрхэн багасгахын тулд градиент бууруулалт гэж нэрлэгддэг аргыг ашиглана. Энэ тохиолдолд градиент гэдэг нь жингүүдийн аль чиглэлд өөрчлөгдөх үед алдаа нь хамгийн хурдтай өсөж буурахыг илэрхийлдэг вектор.. Градиент бууруулалтын үндсэн санаа нь уг градиентыг тооцоолоход оршино. 
 
 Жин шинэчлэлийн дүрэм:
 
